# 11095_ponding_detection

./: readme.md
PC/server_os/: tcp_rtsp.py  应用层协议.txt
PC/side_app/: gui_test.py  readme.txt  snap5.py  tcp.txt
pegasus/comm_client/: BUILD.gn  demo_entry_cmsis.c  demo_entry_posix.c  hal_iot_gpio_ex.c  iot_gpio_ex.h  lwip_tcp_client.c  lwip_tcp_server.c  net_demo.h  net_params.h  uart_control.c  wifi_connecter.c  wifi_connecter.h
structure/: holder.gcode  支架.stl
taurus/nnie/: BUILD.gn  sample_nnie_main.c
taurus/nnie/data/nnie_model/classification/: ponding_c0708.prototxt
taurus/nnie/data/nnie_model/recurrent/: lstm_3_3.wk
taurus/nnie/data/nnie_model/segmentation/: inst_segnet_cycle.wk
taurus/nnie/sample/: sample_nnie.c  sample_nnie_main.h
taurus/nnie/sample_nnie_software/: sample_svp_nnie_software.c  sample_svp_nnie_software.h
taurus/photograph/: BUILD.gn  sample_video.c  uart.c  uart.h
taurus/photograph/smp/: sample_ai_main.cpp  sample_media_ai.c  sample_media_ai.h  sample_media_opencv.cpp  sample_media_opencv.h
taurus/rtsp_sample/: BUILD.gn  ringfifo.c  ringfifo.h  rtputils.c  rtputils.h  rtspservice.c  rtsputils.c  rtsputils.h  sample_comm_venc.c  sample_rtsp.h  sample_rtsp_main.c
taurus/rtsp_sample/smp/: sample_rtsp.c
